STM32CubeIDE/.metadata/.plugins/org.eclipse.cdt.ui/008_timer_IC_1.build.log
09:41:10 **** Incremental Build of configuration Debug for project 008_timer_IC_1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:107:17: warning: implicit declaration of function 'Error_handler'; did you mean 'Error_Handler'? [-Wimplicit-function-declaration]
  107 |                 Error_handler();
      |                 ^~~~~~~~~~~~~
      |                 Error_Handler
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Src/main.c:453:1: error: expected declaration or statement at end of input
  453 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:444:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  444 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:421:6: warning: 'HAL_TIM_IC_CaptureCallback' defined but not used [-Wunused-function]
  421 | void HAL_TIM_IC_CaptureCallback(TIM_HandleTypeDef *htim)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

09:41:10 Build Failed. 2 errors, 3 warnings. (took 379ms)

